thepphuongloan/wp-content/themes/thep/style_long.css
/* ... */
div.btn_contact a span {
    display: inline-block;
    background: url(images/tpl/btn_contact_pro.png) no-repeat right -36px;
    height: 35px;
    padding-right: 29px;
}

/* FOR CONTENT IN CUSTOMER */
section.column2 div.cat-box-title h2 a{
	color: #dc1206;
    font-size: 14px;
    height: 18px;
    font-weight: bold;
    float: left;
    background: #ffffff;
    padding-right: 12px;
    text-transform: uppercase;
    margin-bottom: 20px;
    width: 100%;
}
section.column2 div.cat-box-title div.stripe-line{
	background: url(images/tpl/mid_title.gif) repeat-x left bottom;
    height: 14px;
    margin-top: 0px;
}
section.column2 div.cat-box-content li.first-news{
    display: none;
}
section.column2 div.content div.cat-box-content{
    box-shadow: none;
}
section.column2 div.cat-box-content li.other-news{
    float: left;
    width: 46%;
    border: 2px solid #dbdbdb;
    border-top: none;
    border-right: none;
    margin: 10px 10px 20px 0px;
    height: 100px;
}
section.column2 div.cat-box-content li.other-news a{
	color: #003686;
}
div.content section.column2{
	float: left;
	width: 100%;
}
div.content .home-e3lan div.wpcf7{
    /*clear: none;*/
    display: none;
    /*float: right;*/
    /*width: 55%;*/
    /*padding-right: 10px;*/
    /*text-align: left;*/
}
div.list_comment-title {
    color: #DC1206;
    font-weight: bold;
    padding-bottom: 10px;
}
div.content div.wpcf7 form input.wpcf7-submit {
    background: url(images/tpl/btn.gif) repeat-x top;
    height: 22px;
    border: none;
    padding: 0px !important;
    border-right: 1px solid #000000;
    color: #feba01 !important;
    cursor: pointer;
    font-size: 11px!important;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px!important;
    min-width: 70px;
}
form div.wpcf7-response-output.wpcf7-display-none.wpcf7-validation-errors{
	display: none !important;
}

/* FOR SHORTCODE ONLINE SUPPORT */
.box .box-content {
    padding: 5px 6px;
}
.box_support .row {
    /*padding: 5px 0px 8px;*/
 }
 .box_support .row .yahoo {
    float: left;
    padding-top: 2px;
}
.box_support .row .skype {
    float: right;
}
div.hotline{
	padding-top: 5px;
}
div.hotline table tr td{
	text-align: left;
	font-size: 11px;
    font-family: arial;
    color: #3c3c3c;
}
div.hotline td.l-span{
	width: 50px;
	font-weight: bold;
}


/* FOR PRODUCT DETAIL */
div.content div.post-inner div.product h1.entry-title{
	color: #dc1206;
    font-size: 14px;
    height: 18px;
    font-weight: bold;
    float: left;
    background: url(images/tpl/mid_title.gif)  repeat-x left bottom;;
    padding-right: 12px;
    text-transform: uppercase;
    margin-bottom: 20px;
    width: 100%;
}
div.post-inner div.product div.woocommerce-tabs.wc-tabs-wrapper{
	float: left;
	width: 55%;
	padding: 5px;
}
div.post-inner div.product div.woocommerce-tabs.wc-tabs-wrapper ul.wc-tabs{
	display: none;
}
div.post-inner div.product div.woocommerce-tabs.wc-tabs-wrapper div.entry-content h2{
	display: none;
}
div.post-inner div.product div.related.products h2{
	display: none;
}
div.post-inner div.product div.images{
	float: right;
	width: 40%;
	padding: 5px;
	text-align: center;
	clear: none;
}
div.post-inner div.product span.posted_in a{
	font-weight: bold;
	color: blue;
	text-transform: uppercase;
	text-decoration: underline;
	font-size: 11px;
}
div.post-inner div.product div.woocommerce-tabs div.panel{
	float: none;
	width: 100%;
	padding-top: 20px;
}
/* FOR PRODUCT CATEGORY SLIDER */
div.container div.bx-wrapper div.bx-viewport{
	-webkit-box-shadow: none;
    box-shadow: none;
    border: none;
    padding-left: 10px;
}
div.container div.bx-wrapper div.bx-controls div.bx-pager{
	display: none;
}
#carousel div.slide img{
	border: 1px solid #cccccc;
    padding: 2px;
    width: 95px;
    height: 62px;
    text-align: center;
    margin: auto;
}
#carousel div.slide span.slider-info{
	text-align: left;
}
#carousel div.slide span.slider-info div.slider-name{
	padding-top: 8px;
    color: #000000;
    font-size: 12px;
    font-weight: bold;
    text-transform: uppercase;
}
#carousel div.slide span.slider-info div.slider-description{
	padding-top: 5px;
	font-size: 11px;
    line-height: 150%;
    font-family: arial;
    color: #3c3c3c;
}
div.container div.bx-wrapper div.bx-controls-direction a.bx-prev{
	/*left: -30px;*/
}
div.container div.bx-wrapper div.bx-controls-direction a.bx-next{
	/*right: -30px;*/
}

/* FOR MENU & SUBMENU */
nav#main-nav div.container div.main-menu ul.sub-menu > li.menu-item{
	background-color: #168eba !important;
	border-bottom-color: white;
}
nav#main-nav.fixed-nav.fixed-nav-appear {
	zoom: 0.75;
}
nav#main-nav.fixed-nav {
	zoom: 1;
}
#main-nav ul li a:hover, #main-nav ul ul a:hover, #main-nav ul.sub-menu a:hover, #main-nav ul li.current_page_parent ul a:hover, #main-nav ul li.current-menu-item ul a:hover, #main-nav ul li.current-menu-parent ul a:hover, #main-nav ul li.current-page-ancestor ul li > a:hover{
color: #fffb01 !important;
}

#main-nav div.main-menu ul.menu li ul li.current-menu-item{
border-width: 0px 0px 1px 0px !important;
}

